# OSMO-v2

./: Cargo.toml  README.md
app/: .env.example  index.html  package-lock.json  package.json  smoke.mjs  tsconfig.tsbuildinfo
app/src/: App.tsx  config.ts  styles.css
app/src/lib/: folio.ts
contracts/factory/test_snapshots/test/: creates_registered_working_folio.1.json  (+1 more)
contracts/folio/src/: lib.rs  test.rs
contracts/mock-soroswap-router/: Cargo.toml
contracts/mock-soroswap-router/src/: lib.rs
crates/nebula-interfaces/src/: lib.rs
docs/: CHALLENGES_AND_DECISIONS.md  CHECKLIST.md  DECISION_LOG.md  DEPLOYMENT.md  EXTERNAL_DEPENDENCIES.md  IMPLEMENTATION_PLAN.md  stellar_dtf_prd.md
osmo/: .env.example  README.md  package-lock.json  package.json
osmo/app/: globals.css  layout.tsx  page.tsx
osmo/app/app/: layout.tsx  page.tsx  template.tsx
osmo/app/doc/: page.tsx
osmo/app/dtf/: page.tsx
osmo/components/: launch-app-button.tsx  page-transition.tsx  smooth-scroll.tsx
osmo/components/app/: app-shell.tsx  connect-wallet-modal.tsx  folio-provider.tsx  shared.tsx  wallet-provider.tsx
osmo/components/landing/: basket.tsx  cta.tsx  data.ts  donut.tsx  features.tsx  folio-motif.tsx  footer.tsx  hero.tsx  how-it-works.tsx  navbar.tsx  reveal.tsx  scroll-link.tsx  section-label.tsx  stats.tsx  ticker.tsx
osmo/components/ui/: calendar.tsx
osmo/hooks/: use-live-folio.ts  use-mobile.ts  use-toast.ts
osmo/lib/: config.ts  faucet.ts  folio.ts
osmo/scripts/: refresh-feed.mjs
scripts/: deploy-folio-v2.ps1  price-relay.ps1  refresh-prices.ps1  seed-pools.ps1  setup-testnet.ps1  test.ps1
(+13 files in other folders)
