[package]
name = "nebula-mock-soroswap-router"
description = "Fixed-rate stand-in for the Soroswap Router, for unit testing mint_single_asset in isolation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
nebula-interfaces = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
